# static_linked_dvigl

./: CMakeLists.txt  README.md
includes/: entry.h  entry_p.h
src/dvigl/: entry.cpp  main-cpp-backup  main.cpp  xxx.aaa
src/editor/: main.cpp  mainwindow.cpp  mainwindow.h  ui_mainwindow.h  workerthread.h
src/example_01/: main.cpp
src/game/: main.cpp
